tests/compile-fail/null_without_optional.kofun
# expect-error: E310
fn main() {
    let answer: Int = null
    print(answer)
}
